# POW-EVM

./: customSpec.json
node/: Cargo.toml
node/sha3pow/: Cargo.toml
node/sha3pow/src/: lib.rs
node/src/: chain_spec.rs  cli.rs  command.rs  rpc.rs  service.rs
pallets/difficulty/: Cargo.toml
pallets/difficulty/src/: benchmarking.rs  lib.rs
pallets/rewards/: Cargo.toml
pallets/rewards/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: block_author.rs  constants.rs  lib.rs  precompiles.rs  utxo.rs
